# Django_HW

./: pyproject.toml
catalog/: models.py  urls.py  views.py
catalog/management/commands/: remove_and_fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py
catalog/templates/catalog/: base.html  home.html  item.html
config/: settings.py  urls.py
