[tool.poetry]
name = "django-hw"
version = "0.1.0"
description = ""
authors = ["Denis Antropov <de94onisus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"


[tool.poetry.group.lint.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
